# seenful-demo-v2

./: .gitignore  CLAUDE.md  Cluster_Aggregation_Spec.md  Path_B_Event_Aggregation_Spec.md  README.md  SCHEMA_REFERENCE.md  Seenful_L1_L2_Full_Decision_Flow.md  Seenful_L2_Project_Structure.md  Time_Aggregation_Spec.md  pyproject.toml  pytest.ini
api_harness/: CLAUDE.md  SPEC.md  TEST_PLAN.md  _DASHBOARD.html  __init__.py  adapter.py  client.py  config.py  gen_dashboard.py  runner.py  step1_smoke.py
config/: dimension_thresholds.yaml  event_aggregation.yaml  feature_assembler.yaml  geocoder.yaml  llm_settings.yaml  low_quality_place.yaml  path_b_anchor.yaml  path_b_emotional.yaml  path_b_event.yaml  path_b_location.yaml  path_b_theme.yaml  path_b_time.yaml  place_anchor.yaml  theme_aggregation.yaml  truth_table_backfill.yaml  truth_table_growth.yaml  truth_table_main.yaml
decisions/: 0004-feature-assembler-revision.md  0005-place-anchor-dbch.md  0006-high-freq-low-quality-place.md  0007-unified-location-bands.md  0008-theme-semantic-clustering.md  0009-event-aggregation.md  0010-path-b-location-dbch-pca-shape.md  0011-time-natural-day-event-clustering.md  0012-path-b-event-aggregation.md  0013-path-b-theme-two-tier-cluster.md  0014-path-b-anchor-two-tier-cluster.md  0015-path-b-emotional-single-tier-cluster.md  0016-location-geocoder-4tier.md  0017-pipeline-cascade-backfill.md  0018-feature-assembler-plan-ab-switch.md  0019-persona-based-e2e-testing.md  0020-real-api-integration.md  0021-llm-label-realism.md  0022-th0-multi-parallel-clusters-medium.md  (+3 more)
(+315 files in other folders)
